tawk live chat done

--- a/src/Plugins/Nop.Plugin.Misc.NopHunter.LiveChat/Views/_ViewImports.cshtml
+++ b/src/Plugins/Nop.Plugin.Misc.NopHunter.LiveChat/Views/_ViewImports.cshtml
@@ -8,8 +8,8 @@
 @using Microsoft.AspNetCore.Routing
 @using Nop.Core
 @using Nop.Core.Infrastructure
-@using Nop.Plugin.Misc.Omnisend
-@using Nop.Plugin.Misc.Omnisend.Models
+@using Nop.Plugin.Misc.NopHunter.LiveChat
+@using Nop.Plugin.Misc.NopHunter.LiveChat.Models
 @using Nop.Services.Events
 @using Nop.Web.Framework
 @using Nop.Web.Framework.Models
